# University

./: .gitignore  README.md
Algorytmy_i_struktury_danych/exercises/: AISDDEBIUT.cpp  AISDPOTEGOWANIE.cpp  BINSRCH.cpp  FIB.cpp
Algorytmy_i_struktury_danych/labs/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
Analiza_numeryczna_M/exercises/: 1-M1.ipynb  1-M3.ipynb  1-M5.ipynb  2-M10.ipynb  3-M11.ipynb  3-M12.ipynb  3-M13.ipynb
Analiza_numeryczna_M/labs/: .gitignore
Architektury_systemow_komputerowych/l12/: matmult.c
Eksploracja_danych/: README.md
Eksploracja_danych/list2/: all_dists.m  nearest.m  (+2 more)
Eksploracja_tekstow/: .gitignore  requirements.txt
Jezyki_formalne_i_zlozonosc_obliczeniowa/: README.md  task98.tex
Kurs_Projektowanie_i_implementacja_zaawansowanych_aplikacji_PHP/: .gitignore
Kurs_projektowania_aplikacji_ASPNET/: .gitignore
Kurs_rozszerzony_jezyka_Python/: .gitignore
Praca_inzynierska/: .gitignore  README.md  docker-compose.yml  init.sql  mineblocks.py  topup.py
Programowanie_funkcyjne/: README.md  list1.ml  list2.ml  list3.ml  list4.ml
Projektowanie_i_wdrazanie_systemow_w_chmurze/: .gitignore
Seminarium_Blockchain_i_jego_zastosowania/: btc.sh  templates.txt
Sieci_komputerowe/: .gitignore
Sieci_neuronowe/: Assignment5.ipynb
Sztuczna_inteligencja/: .gitignore
term2/Metody-Programowania/mp4/impl/prac4/: prac4.cabal
term2/Metody-Programowania/mp4/impl/prac4/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
term2/Metody-Programowania/mp4/impl/prac4/src/: SlawomirGorawski.hs
(+824 files in other folders)
